--- a/proyecto2-frontend/src/css/style.css
+++ b/proyecto2-frontend/src/css/style.css
@@ -333,3 +333,10 @@ input[type="submit"]:hover, input[type="date"]:hover, input[type="radio"]:hover 
     max-height: 100px;
     overflow-y: auto;
 }
+
+.logoFactura {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
